--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"mongoskin": "^2.1.0",
 		"q": "^1.4.1",
 		"request": "^2.58.0",
-		"rootpath": "^0.1.2"		
+		"rootpath": "^0.1.2",
+		"serve-favicon": "latest"
 	}
 }
