--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"q": "^1.4.1",
 		"request": "^2.58.0",
 		"rootpath": "^0.1.2",
-		"serve-favicon": "latest"
+		"serve-favicon": "latest",
+		"datejs": "latest"
 	}
 }
