--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 ﻿{
-	"connectionString": "mongodb://localhost:27017/tsk_01",
+	"connectionString": "mongodb://heroku_vjh00djb:hlfl9vd0qqojfksqmf9hfocmiq@ds055485.mlab.com:55485/heroku_vjh00djb",
     "apiUrl": "http://localhost:8080/api",
     "secret": "This is top secret.",
 	"port": 8080
